
	Tweaks & Bug Fixes
		System: Improved Fast Finder student search permissions
		System: added Albanian as development language
		System: added Moroccan dirham as a currency option
		System: upgraded jQuery to v2.2.4 and jQuery Migrate to v1.4.1
		System: fixed bug preventing jQuery Chained from working properly
		Attendance: added ability (off by default) for students to register themselves as Present, when within a set of IP addresses
		Attendance: added explicitly stored context recording where attendance was taken
		Attendance: added settings to determine pre-filling of attendance in different contexts
		Attendance: added settings to determine default type in different contexts
		Attendance: added dynamic legend for Student History report
		Students: added ability to store internal documents against student application forms
		Timetable Admin: fix bulk checking bug in Tie Days to Dates

v13.0.01
--------
Tweaks & Bug Fixes
	System: installer adjusted to provide compatibility with Softaculous
	System: fixed Resource tag issue in demo data
	Resources: fixed PHP notice in View Resources

v13.0.00
--------
	Headlines
		Automated Scope & Sequence documentation in Planner, based on Unit Planner
		Concept Explorer in Planner, based on Unit Planner concepts & keywords
		Attendance by class, plus generation of student attendance reports
		Messenger read receipts, in order to confirm receipt of and agreement to emails
		Improved student application workflow for siblings
		Translatability of additional modules
		New notification tray to improve visibility of notifications and other alerts
		Installation requirements checking

	Changes With Important Notices
		System: updated PHPMailer to v5.2.16, and switched to SMTP mailing (check that your server supports un-authenticated local SMTP relay, or set up SMTP in Third Party Settings)
		System: updated TinyMCE library to latest release (might require users to clear browser cache to load WYSIWYG)